; ModuleID = '/home/carl/AnghaBench/reactos/modules/rosapps/applications/screensavers/ssstars/extr_settings.c_QueryDWORD.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rosapps/applications/screensavers/ssstars/extr_settings.c_QueryDWORD.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@REG_DWORD = common dso_local global i64 0, align 8
@ERROR_SUCCESS = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32, i32, i64)* @QueryDWORD to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @QueryDWORD(i32 %0, i32 %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  %12 = load i64, i64* @REG_DWORD, align 8
  store i64 %12, i64* %9, align 8
  store i64 8, i64* %10, align 8
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* %6, align 4
  %15 = ptrtoint i64* %8 to i32
  %16 = call i64 @RegQueryValueEx(i32 %13, i32 %14, i32* null, i64* %9, i32 %15, i64* %10)
  store i64 %16, i64* %11, align 8
  %17 = load i64, i64* %11, align 8
  %18 = load i64, i64* @ERROR_SUCCESS, align 8
  %19 = icmp ne i64 %17, %18
  br i1 %19, label %24, label %20

20:                                               ; preds = %3
  %21 = load i64, i64* %9, align 8
  %22 = load i64, i64* @REG_DWORD, align 8
  %23 = icmp ne i64 %21, %22
  br i1 %23, label %24, label %26

24:                                               ; preds = %20, %3
  %25 = load i64, i64* %7, align 8
  store i64 %25, i64* %4, align 8
  br label %28

26:                                               ; preds = %20
  %27 = load i64, i64* %8, align 8
  store i64 %27, i64* %4, align 8
  br label %28

28:                                               ; preds = %26, %24
  %29 = load i64, i64* %4, align 8
  ret i64 %29
}

declare dso_local i64 @RegQueryValueEx(i32, i32, i32*, i64*, i32, i64*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
